tdf#65356 Photo Album: Allow inserting images as link

Change-Id: Ic7d1228b9e0a5ee5a303c5e3f4ce4d5a1b2b2036